--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project | Home Page</title>
+    <title>Project | About Page</title>
 </head>
 
 <body data-barba="wrapper">
@@ -14,11 +14,11 @@
         <div class="loading-screen"></div>
     </div>
 
-    <main data-barba="container" data-barba-namespace="home-section">
+    <main data-barba="container" data-barba-namespace="about-section">
         <div class="header">
-            <h1 class="title animate-this">Home Page</h1>
+            <h1 class="title animate-this">About Page</h1>
             <div class="animate-this button">
-                <a href="about.html">GO TO ABOUT PAGE</a>
+                <a href="index.html">GO BACK TO HOME PAGE</a>
             </div>
         </div>
     </main>
